# CMakeList.txt : CMake project for Win_usb_com, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Win_usb_com "Win_usb_com.cpp" "Win_usb_com.h")

# TODO: Add tests and install targets if needed.
